fix(front-end/banner): solved overflow bug

--- a/front-end/src/components/organisms/banner/banner-styles.scss
+++ b/front-end/src/components/organisms/banner/banner-styles.scss
@@ -1,10 +1,10 @@
 .banner {
   height: 0;
   margin: 0 auto;
-  max-width: var(--container-spacing-desktop);
+  max-width: calc(1440px + 2 * var(--container-padding-inline-desktop));
   padding-bottom: 424px;
+  padding-inline: 0;
   position: relative;
-  width: 100%;
 
   &__image {
     height: 100%;
